--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-<!-- Conteúdo simulado de index.html -->
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+  <meta charset="UTF-8" />
+  <title>Login - Controle de Uniformes Geração</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <div class="login-container">
+    <img src="logo_geracao.png" alt="Logo Geração" class="logo" />
+    <h2>Login</h2>
+    <form>
+      <input type="text" placeholder="Usuário" required />
+      <input type="password" placeholder="Senha" required />
+      <button type="submit">Entrar</button>
+    </form>
+  </div>
+</body>
+</html>
