--- a/entregas.html
+++ b/entregas.html
@@ -1,1 +1,38 @@
-<html><body><h1>Entregas</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <title>Histórico de Entregas</title>
+    <style>
+        body { font-family: Arial, sans-serif; background-color: #fff; margin:0; display:flex; }
+        .conteudo { padding: 20px; flex:1; }
+        table { width: 100%; border-collapse: collapse; }
+        th, td { padding: 10px; border: 1px solid #ccc; }
+    </style>
+</head>
+<body>
+    
+<div style="width:200px;float:left;height:100vh;background:#c00;color:white;padding:20px;box-sizing:border-box;">
+    <h3>Geração</h3>
+    <ul style="list-style:none;padding:0;">
+        <li><a href="painel.html" style="color:white;text-decoration:none;">📊 Painel</a></li>
+        <li><a href="cadastro_funcionario.html" style="color:white;text-decoration:none;">👤 Funcionários</a></li>
+        <li><a href="regras_entrega.html" style="color:white;text-decoration:none;">📋 Regras</a></li>
+        <li><a href="entrega_sugerida.html" style="color:white;text-decoration:none;">📦 Entregas</a></li>
+        <li><a href="entregas.html" style="color:white;text-decoration:none;">🗂️ Histórico</a></li>
+        <li><a href="index.html" style="color:white;text-decoration:none;">🚪 Sair</a></li>
+    </ul>
+</div>
+
+    <div class="conteudo">
+        
+    <h1>Histórico de Entregas</h1>
+    <table>
+        <tr><th>Funcionário</th><th>Item</th><th>Qtd</th><th>Data</th><th>Próxima Troca</th><th>Status</th></tr>
+        <tr><td>Maria Silva</td><td>Camisa Polo</td><td>2</td><td>01/01/25</td><td>01/07/25</td><td>🔔</td></tr>
+    </table>
+
+    </div>
+</body>
+</html>
