--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
+
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <title>Login - Controle de Uniformes Geração</title>
-  <link rel="stylesheet" href="style.css" />
+<html>
+<head><meta charset="UTF-8"><title>Login</title>
+<style>
+body { font-family: Arial; background:#fae6dc; display:flex; justify-content:center; align-items:center; height:100vh; margin:0; }
+.login-box { background:white; padding:20px; width:320px; text-align:center; border-radius:8px; box-shadow:0 0 10px #ccc; }
+input, button { width:90%; padding:10px; margin:10px 0; }
+button { background:#c00; color:white; border:none; }
+</style>
 </head>
 <body>
-  <div class="login-container">
-    <img src="logo_geracao.png" alt="Logo Geração" class="logo" />
-    <h2>Login</h2>
-    <form>
-      <input type="text" placeholder="Usuário" required />
-      <input type="password" placeholder="Senha" required />
-      <button type="submit">Entrar</button>
-    </form>
-  </div>
+<div class="login-box">
+    <img src="logo_geracao.png" style="width:200px;"><br>
+    <h2>CONTROLE DE UNIFORMES</h2>
+    <input placeholder="Usuário"><input type="password" placeholder="Senha">
+    <button onclick="location.href='painel.html'">Entrar</button>
+</div>
 </body>
 </html>
